Travis: added extra-android-m2repository as a dependency for build script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@
 language: android
 android:
   components:
+    - extra-android-m2repository
     - build-tools-20.0.0
     - android-21
     - android-22
