--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,15 @@ android:
     - android-22
     - sys-img-armeabi-v7a-android-21
 
+env:
+    - TERM=dumb
+
 # Emulator Management: Create, Start and Wait
 before_script:
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - emulator -avd test -skin 480x800 -no-audio -no-window &
   - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+  - adb shell input keyevent 82
   - cd examples/android/android-studio
 
 script: for subdir in $(ls -d */); do cd $subdir && ./gradlew connectedCheck && cd .. || cd .. && gradle_failed=1; done && expr ${gradle_failed?0} = 0
